--- a/package.json
+++ b/package.json
@@ -1,21 +1,48 @@
 {
-  "name": "faellestival",
-  "private": true,
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@vitejs/plugin-react": "^1.3.0",
-    "sass": "^1.51.0",
-    "vite": "^2.9.9"
-  }
+    "name": "faellestival",
+    "private": true,
+    "version": "0.0.0",
+    "homepage": "http://localhost:3000/checkout",
+    "proxy": "http://localhost:4242",
+    "scripts": {
+        "start-client": "react-scripts start",
+        "start-server": "node server.js",
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview",
+        "start": "concurrently \"npm run start-client\" \"npm run start-server\""
+    },
+    "dependencies": {
+        "@stripe/react-stripe-js": "^1.8.0-0",
+        "@stripe/stripe-js": "^1.29.0",
+        "dotenv": "^16.0.1",
+        "express": "^4.17.1",
+        "react": "^16.9.0",
+        "react-dom": "^16.9.0",
+        "react-scripts": "^5.0.1",
+        "stripe": "^8.202.0"
+    },
+    "devDependencies": {
+        "@types/react": "^18.0.0",
+        "@types/react-dom": "^18.0.0",
+        "@vitejs/plugin-react": "^1.3.0",
+        "concurrently": "^7.2.0",
+        "sass": "^1.51.0",
+        "vite": "^2.9.9"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    }
 }
