--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dependencies": {
         "moment": "^2.29.3",
         "react": "^18.0.0",
-        "react-dom": "^18.0.0"
+        "react-dom": "^18.0.0",
+        "uuid": "^8.3.2"
     },
     "devDependencies": {
         "@types/react": "^18.0.0",
