--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "faellestival",
     "private": true,
     "version": "0.0.0",
+    "main": "./main.jsx",
     "scripts": {
         "dev": "vite",
         "build": "vite build",
